src/lib_gd/repository.cr

@[Link(ldflags: "-lgd -ljpeg")]
lib LibGD
  ALPHAMAX                  =   127
  ALPHAOPAQUE               =     0
  ALPHATRANSPARENT          =   127
  ARC                       =     0
  BLUEMAX                   =   255
  CHORD                     =     1
  DASHSIZE                  =     4
  EDGED                     =     4
  EFFECTALPHABLEND          =     1
  EFFECTMULTIPLY            =     4
  EFFECTNORMAL              =     2
  EFFECTOVERLAY             =     3
  EFFECTREPLACE             =     0
  FTEX_ADOBE_CUSTOM         =     3
  FTEX_BIG5                 =     2
  FTEX_CHARMAP              =     2
  FTEX_DISABLE_KERNING      =     8
  FTEX_FONTCONFIG           =    64
  FTEX_FONTPATHNAME         =    32
  FTEX_LINESPACE            =     1
  FTEX_RESOLUTION           =     4
  FTEX_RETURNFONTPATHNAME   =   128
  FTEX_SHIFT_JIS            =     1
  FTEX_UNICODE              =     0
  FTEX_XSHOW                =    16
  GREENMAX                  =   255
  MAXCOLORS                 =   256
  NOFILL                    =     2
  REDMAX                    =   255
  WEBPLOSSLESS              =   101
  DisposalNone              = 1_i64
  DisposalRestoreBackground = 2_i64
  DisposalRestorePrevious   = 3_i64
  DisposalUnknown           = 0_i64
  alias CallbackImageColor = (ImagePtr, LibC::Int -> LibC::Int)
  alias ErrorMethod = (LibC::Int, LibC::Char*, VaList -> Void)
  alias FontPtr = Font*
  alias FtStringExtraPtr = FtStringExtra*
  alias HeifChroma = LibC::Char*
  alias ImagePtr = Image*
  alias IoCtxPtr = IoCtx*
  alias PointFPtr = PointF*
  alias PointPtr = Point*
  alias RectPtr = Rect*
  alias ScatterPtr = Scatter*
  alias SinkPtr = Sink*
  alias SourcePtr = Source*
  alias InterpolationMethod = (LibC::Double, LibC::Double -> LibC::Double)
  alias VaList = X__GnucVaList
  alias X_IoCodecvt = Void
  alias X_IoLockT = Void
  alias X_IoMarker = Void
  alias X_IoWideData = Void
  alias X__GnucVaList = LibC::VaList
  alias X__Off64T = LibC::Long
  alias X__OffT = LibC::Long
  enum HeifCodec
    HeifCodecUnknown = 0
    HeifCodecHevc    = 1
    HeifCodecAv1     = 4
  end
  enum InterpolationMethodID
    Default          =  0
    Bell             =  1
    Bessel           =  2
    BilinearFixed    =  3
    Bicubic          =  4
    BicubicFixed     =  5
    Blackman         =  6
    Box              =  7
    Bspline          =  8
    Catmullrom       =  9
    Gaussian         = 10
    GeneralizedCubic = 11
    Hermite          = 12
    Hamming          = 13
    Hanning          = 14
    Mitchell         = 15
    NearestNeighbour = 16
    Power            = 17
    Quadratic        = 18
    Sinc             = 19
    Triangle         = 20
    Weighted4        = 21
    Linear           = 22
    Lanczos3         = 23
    Lanczos8         = 24
    BlackmanBessel   = 25
    BlackmanSinc     = 26
    QuadraticBspline = 27
    CubicSpline      = 28
    Cosine           = 29
    Welsh            = 30
    MethodCount      = 30
  end
  fun affine_apply_to_point_f = gdAffineApplyToPointF(dst : PointFPtr, src : PointFPtr, affine : LibC::Double[6]) : LibC::Int
  fun affine_concat = gdAffineConcat(dst : LibC::Double[6], m1 : LibC::Double[6], m2 : LibC::Double[6]) : LibC::Int
  fun affine_equal = gdAffineEqual(matrix1 : LibC::Double[6], matrix2 : LibC::Double[6]) : LibC::Int
  fun affine_expansion = gdAffineExpansion(src : LibC::Double[6]) : LibC::Double
  fun affine_flip = gdAffineFlip(dst_affine : LibC::Double[6], src_affine : LibC::Double[6], flip_h : LibC::Int, flip_v : LibC::Int) : LibC::Int
  fun affine_identity = gdAffineIdentity(dst : LibC::Double[6]) : LibC::Int
  fun affine_invert = gdAffineInvert(dst : LibC::Double[6], src : LibC::Double[6]) : LibC::Int
  fun affine_rectilinear = gdAffineRectilinear(src : LibC::Double[6]) : LibC::Int
  fun affine_rotate = gdAffineRotate(dst : LibC::Double[6], angle : LibC::Double) : LibC::Int
  fun affine_scale = gdAffineScale(dst : LibC::Double[6], scale_x : LibC::Double, scale_y : LibC::Double) : LibC::Int
  fun affine_shear_horizontal = gdAffineShearHorizontal(dst : LibC::Double[6], angle : LibC::Double) : LibC::Int
  fun affine_shear_vertical = gdAffineShearVertical(dst : LibC::Double[6], angle : LibC::Double) : LibC::Int
  fun affine_translate = gdAffineTranslate(dst : LibC::Double[6], offset_x : LibC::Double, offset_y : LibC::Double) : LibC::Int
  fun alpha_blend = gdAlphaBlend(dest : LibC::Int, src : LibC::Int) : LibC::Int
  fun clear_error_method = gdClearErrorMethod
  fun dp_extract_data = gdDPExtractData(ctx : IoCtxPtr, size : LibC::Int*) : Void*
  fun extra_version = gdExtraVersion : LibC::Char*
  fun font_cache_setup = gdFontCacheSetup : LibC::Int
  fun font_cache_shutdown = gdFontCacheShutdown
  fun free = gdFree(m : Void*)
  fun free_font_cache = gdFreeFontCache
  fun ft_use_font_config = gdFTUseFontConfig(flag : LibC::Int) : LibC::Int
  fun get_buf = gdGetBuf(x0 : Void*, x1 : LibC::Int, x2 : IoCtxPtr) : LibC::Int
  fun get_byte = gdGetByte(result : LibC::Int*, ctx : IoCtxPtr) : LibC::Int
  fun get_c = gdGetC(ctx : IoCtxPtr) : LibC::Int
  fun get_int = gdGetInt(result : LibC::Int*, ctx : IoCtxPtr) : LibC::Int
  fun get_int_lsb = gdGetIntLSB(result : LibC::Int*, ctx : IoCtxPtr) : LibC::Int
  fun get_word = gdGetWord(result : LibC::Int*, ctx : IoCtxPtr) : LibC::Int
  fun get_word_lsb = gdGetWordLSB(result : LibC::Short*, ctx : IoCtxPtr) : LibC::Int
  fun image_aa_blend = gdImageAABlend(im : ImagePtr)
  fun image_alpha_blending = gdImageAlphaBlending(im : ImagePtr, alpha_blending_arg : LibC::Int)
  fun image_arc = gdImageArc(im : ImagePtr, cx : LibC::Int, cy : LibC::Int, w : LibC::Int, h : LibC::Int, s : LibC::Int, e : LibC::Int, color : LibC::Int)
  fun image_avif = gdImageAvif(im : ImagePtr, out_file : File*)
  fun image_avif_ctx = gdImageAvifCtx(im : ImagePtr, outfile : IoCtxPtr, quality : LibC::Int, speed : LibC::Int)
  fun image_avif_ex = gdImageAvifEx(im : ImagePtr, out_file : File*, quality : LibC::Int, speed : LibC::Int)
  fun image_avif_ptr = gdImageAvifPtr(im : ImagePtr, size : LibC::Int*) : LibC::Char*
  fun image_avif_ptr_ex = gdImageAvifPtr(im : ImagePtr, size : LibC::Int*) : LibC::Char*
  fun image_bmp = gdImageBmp(im : ImagePtr, out_file : File*, compression : LibC::Int)
  fun image_bmp_ctx = gdImageBmpCtx(im : ImagePtr, out : IoCtxPtr, compression : LibC::Int)
  fun image_bmp_ptr = gdImageBmpPtr(im : ImagePtr, size : LibC::Int*, compression : LibC::Int) : LibC::Char*
  fun image_bounds_safe = gdImageBoundsSafe(im : ImagePtr, x : LibC::Int, y : LibC::Int) : LibC::Int
  fun image_brightness = gdImageBrightness(src : ImagePtr, brightness : LibC::Int) : LibC::Int
  fun image_char = gdImageChar(im : ImagePtr, f : FontPtr, x : LibC::Int, y : LibC::Int, c : LibC::Int, color : LibC::Int)
  fun image_char_up = gdImageCharUp(im : ImagePtr, f : FontPtr, x : LibC::Int, y : LibC::Int, c : LibC::Int, color : LibC::Int)
  fun image_clone = gdImageClone(src : ImagePtr) : ImagePtr
  fun image_color = gdImageColor(src : ImagePtr, red : LibC::Int, green : LibC::Int, blue : LibC::Int, alpha : LibC::Int) : LibC::Int
  fun image_color_allocate = gdImageColorAllocate(im : ImagePtr, r : LibC::Int, g : LibC::Int, b : LibC::Int) : LibC::Int
  fun image_color_allocate_alpha = gdImageColorAllocateAlpha(im : ImagePtr, r : LibC::Int, g : LibC::Int, b : LibC::Int, a : LibC::Int) : LibC::Int
  fun image_color_closest = gdImageColorClosest(im : ImagePtr, r : LibC::Int, g : LibC::Int, b : LibC::Int) : LibC::Int
  fun image_color_closest_alpha = gdImageColorClosestAlpha(im : ImagePtr, r : LibC::Int, g : LibC::Int, b : LibC::Int, a : LibC::Int) : LibC::Int
  fun image_color_closest_hwb = gdImageColorClosestHWB(im : ImagePtr, r : LibC::Int, g : LibC::Int, b : LibC::Int) : LibC::Int
  fun image_color_deallocate = gdImageColorDeallocate(im : ImagePtr, color : LibC::Int)
  fun image_color_exact = gdImageColorExact(im : ImagePtr, r : LibC::Int, g : LibC::Int, b : LibC::Int) : LibC::Int
  fun image_color_exact_alpha = gdImageColorExactAlpha(im : ImagePtr, r : LibC::Int, g : LibC::Int, b : LibC::Int, a : LibC::Int) : LibC::Int
  fun image_color_match = gdImageColorMatch(im1 : ImagePtr, im2 : ImagePtr) : LibC::Int
  fun image_color_replace = gdImageColorReplace(im : ImagePtr, src : LibC::Int, dst : LibC::Int) : LibC::Int
  fun image_color_replace_array = gdImageColorReplaceArray(im : ImagePtr, len : LibC::Int, src : LibC::Int*, dst : LibC::Int*) : LibC::Int
  fun image_color_replace_callback = gdImageColorReplaceCallback(im : ImagePtr, callback : CallbackImageColor) : LibC::Int
  fun image_color_replace_threshold = gdImageColorReplaceThreshold(im : ImagePtr, src : LibC::Int, dst : LibC::Int, threshold : LibC::Float) : LibC::Int
  fun image_color_resolve = gdImageColorResolve(im : ImagePtr, r : LibC::Int, g : LibC::Int, b : LibC::Int) : LibC::Int
  fun image_color_resolve_alpha = gdImageColorResolveAlpha(im : ImagePtr, r : LibC::Int, g : LibC::Int, b : LibC::Int, a : LibC::Int) : LibC::Int
  fun image_color_transparent = gdImageColorTransparent(im : ImagePtr, color : LibC::Int)
  fun image_compare = gdImageCompare(im1 : ImagePtr, im2 : ImagePtr) : LibC::Int
  fun image_contrast = gdImageContrast(src : ImagePtr, contrast : LibC::Double) : LibC::Int
  fun image_convolution = gdImageConvolution(src : ImagePtr, filter : LibC::Float[3][3], filter_div : LibC::Float, offset : LibC::Float) : LibC::Int
  fun image_copy = gdImageCopy(dst : ImagePtr, src : ImagePtr, dst_x : LibC::Int, dst_y : LibC::Int, src_x : LibC::Int, src_y : LibC::Int, w : LibC::Int, h : LibC::Int)
  fun image_copy_gaussian_blurred = gdImageCopyGaussianBlurred(src : ImagePtr, radius : LibC::Int, sigma : LibC::Double) : ImagePtr
  fun image_copy_merge = gdImageCopyMerge(dst : ImagePtr, src : ImagePtr, dst_x : LibC::Int, dst_y : LibC::Int, src_x : LibC::Int, src_y : LibC::Int, w : LibC::Int, h : LibC::Int, pct : LibC::Int)
  fun image_copy_merge_gray = gdImageCopyMergeGray(dst : ImagePtr, src : ImagePtr, dst_x : LibC::Int, dst_y : LibC::Int, src_x : LibC::Int, src_y : LibC::Int, w : LibC::Int, h : LibC::Int, pct : LibC::Int)
  fun image_copy_resampled = gdImageCopyResampled(dst : ImagePtr, src : ImagePtr, dst_x : LibC::Int, dst_y : LibC::Int, src_x : LibC::Int, src_y : LibC::Int, dst_w : LibC::Int, dst_h : LibC::Int, src_w : LibC::Int, src_h : LibC::Int)
  fun image_copy_resized = gdImageCopyResized(dst : ImagePtr, src : ImagePtr, dst_x : LibC::Int, dst_y : LibC::Int, src_x : LibC::Int, src_y : LibC::Int, dst_w : LibC::Int, dst_h : LibC::Int, src_w : LibC::Int, src_h : LibC::Int)
  fun image_copy_rotated = gdImageCopyRotated(dst : ImagePtr, src : ImagePtr, dst_x : LibC::Double, dst_y : LibC::Double, src_x : LibC::Int, src_y : LibC::Int, src_width : LibC::Int, src_height : LibC::Int, angle : LibC::Int)
  fun image_create = gdImageCreate(sx : LibC::Int, sy : LibC::Int) : ImagePtr
  fun image_create_from_avif = gdImageCreateFromAvif(in_file : File*) : ImagePtr
  fun image_create_from_avif_ctx = gdImageCreateFromAvifCtx(infile : IoCtxPtr) : ImagePtr
  fun image_create_from_avif_ptr = gdImageCreateFromAvifPtr(size : LibC::Int, data : Void*) : ImagePtr
  fun image_create_from_bmp = gdImageCreateFromBmp(in_file : File*) : ImagePtr
  fun image_create_from_bmp_ctx = gdImageCreateFromBmpCtx(infile : IoCtxPtr) : ImagePtr
  fun image_create_from_bmp_ptr = gdImageCreateFromBmpPtr(size : LibC::Int, data : Void*) : ImagePtr
  fun image_create_from_file = gdImageCreateFromFile(filename : LibC::Char*) : ImagePtr
  fun image_create_from_gd = gdImageCreateFromGd(in : File*) : ImagePtr
  fun image_create_from_gd2 = gdImageCreateFromGd2(in : File*) : ImagePtr
  fun image_create_from_gd2_ctx = gdImageCreateFromGd2Ctx(in : IoCtxPtr) : ImagePtr
  fun image_create_from_gd2_part = gdImageCreateFromGd2Part(in : File*, srcx : LibC::Int, srcy : LibC::Int, w : LibC::Int, h : LibC::Int) : ImagePtr
